RESOLVED FIXED159082
Vimeo.com videos do not get playback controls
https://bugs.webkit.org/show_bug.cgi?id=159082
Summary Vimeo.com videos do not get playback controls
Jer Noble
Reported 2016-06-23 23:43:26 PDT
Vimeo.com videos do not get playback controls
Attachments
Patch (1.60 KB, patch)
2016-06-23 23:47 PDT, Jer Noble
no flags
Patch (1.73 KB, patch)
2016-06-24 11:55 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2016-06-23 23:47:33 PDT
Jer Noble
Comment 2 2016-06-24 11:55:06 PDT
Beth Dakin
Comment 3 2016-06-24 15:02:52 PDT
Official WK2 👍🏻
WebKit Commit Bot
Comment 4 2016-06-24 15:25:38 PDT
Comment on attachment 282007 [details] Patch Clearing flags on attachment: 282007 Committed r202455: <http://trac.webkit.org/changeset/202455>
WebKit Commit Bot
Comment 5 2016-06-24 15:25:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.