Vimeo.com videos do not get playback controls https://bugs.webkit.org/show_bug.cgi?id=159082 <rdar://problem/26586630>

Reviewed by Eric Carlson.

When the HasAudioOrVideo media state changes, let the video controls recalculate
by calling videoControlsManagerDidChange().

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::isPlayingMediaDidChange):


Canonical link: https://commits.webkit.org/177211@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202455 268f45cc-cd09-0410-ab3c-d52691b4dbfc